syntax = "proto3";

package order;

option go_package = "./order";

message OrderItem {
  string Pid = 1;
  int32 Quantity = 2;
}

message Order {
  string OrderId = 1;
  string UserId = 2;
  repeated OrderItem Items = 3;
  double TotalPrice = 4;
  string Status = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
}

message CreateOrderRequest {
  string UserId = 1;
  bool UseCart = 2;
  repeated OrderItem Items = 3;
}

message CreateOrderResponse {
  string OrderId = 1;
}

message GetOrderDetailRequest {
  string OrderId = 1;
  string UserId = 2; // 新增 UserId
}

message GetOrderDetailResponse {
  Order Order = 1;
}

message ListOrdersRequest {
  string UserId = 1;
  int32 Page = 2;
  int32 PageSize = 3;
}

message ListOrdersResponse {
  repeated Order Orders = 1;
  int32 Total = 2;
}

message UpdateOrderStatusRequest {
  string OrderId = 1;
  string Status = 2;
  string UserId = 3;
}

message UpdateOrderStatusResponse {
  bool Success = 1;
}

message SeckillOrderRequest {
  string UserId = 1;
  string Pid = 2;
  int32 Quantity = 3;
}

message SeckillOrderResponse {
  string OrderId = 1;
  bool Success = 2;
}

service OrderRpc {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderDetail(GetOrderDetailRequest) returns (GetOrderDetailResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc SeckillOrder(SeckillOrderRequest) returns (SeckillOrderResponse);
}